* Changes from v1.4 to v1.5 :
	- Added the possibility to display the error in grayscale (useful
	  for making screenshots that *have* to be in grayscale...)

* Changes from v1.3 to v1.4 :
	- '-malign-double' causes troubles when compiling C++ files with 
	  Qt 3.x. We now only use it when compiling C files.
	- Fixed (hopefully definitely) this lousy formatting on both the
	  external window and console.
	- Made the main widget display a caption containing the filename of
	  each model.
	- Added a basic CPU detection (Linux only) in the Makefile (mostly
	  for the Intel and PGCC compilers)

* Changes from v1.2 to v1.3 :
	- Fixed memory allocation bug for non-manifold models in
	  add_adj_face_extra() (mis-sized realloc leading to memory corruption)
	- Added support for compiling with PGCC (Portland Group) compiler
	- Optimization: align doubles at 8 byte boundaries on x86
	- Default to Pentium IV only builds with PGCC and ICC compilers
	- When detecting the file format, check for file error before
	  returning.
	- Fixed incorrect handling of unknown nodes (color and texCoord). They
	  are now skipped (hopefully) without failure.

* Changes from v1.1 to v1.2 :
	- Fixed a bug in the reading low-level functions : 'buf_getc'
	  did not read the last char of the data block
	- Added possibility to read basic Inventor 2.x and SMF files
	- Fixed a mishandling of vertices having only one incident faces when
	  analyzing the model
	- Fixed a bad initialization of 'data->pos' to 0 that caused a read
	  at -1 (thx Valgrind ...)
	- Fixed : field 'builtin_normals' of 'struct model' should only be 
          set if the vertex normals are present (not for the face normals) 
	- Added/Updated comments in 'model_in.[ch]'
	- Minor tweaks in the block size in 'model_in.c'

* Changes from v1.0 to v1.1 :
	- Added possibility to read gzipped VRML using zlib
	- Fixed build under IRIX and Solaris
	- Better output in the external window