@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.48 2002/05/07 11:03:49 aspert Exp $
+# $Id: Makefile,v 1.49 2002/08/09 15:26:39 aspert Exp $
 
 
 
@@ -36,7 +36,7 @@
 #
 #  Reference :
 #   "MESH : Measuring Errors between Surfaces using the Hausdorff distance"
-#   Submitted to ICME 2002, available on http://mesh.epfl.ch
+#   Accepted for publication, ICME 2002, available on http://mesh.epfl.ch
 #
 #
 
