@@ -1,4 +1,4 @@
-/* $Id: TextWidget.cpp,v 1.11 2002/04/08 08:04:23 aspert Exp $ */
+/* $Id: TextWidget.cpp,v 1.12 2002/08/09 15:26:40 aspert Exp $ */
 
 
 /*
@@ -36,9 +36,11 @@
  *
  *  Reference :
  *   "MESH : Measuring Errors between Surfaces using the Hausdorff distance"
- *   Submitted to ICME 2002, available on http://mesh.epfl.ch
+ *   Accepted for publication, ICME 2002, available on http://mesh.epfl.ch
  *
  */
+
+
 
 
 #include <TextWidget.h>
