@@ -1,4 +1,4 @@
-/* $Id: compute_error.c,v 1.87 2002/04/18 17:28:59 dsanta Exp $ */
+/* $Id: compute_error.c,v 1.88 2002/08/09 15:26:41 aspert Exp $ */
 
 
 /*
@@ -36,9 +36,11 @@
  *
  *  Reference :
  *   "MESH : Measuring Errors between Surfaces using the Hausdorff distance"
- *   Submitted to ICME 2002, available on http://mesh.epfl.ch
+ *   Accepted for publication, ICME 2002, available on http://mesh.epfl.ch
  *
  */
+
+
 
 #include <compute_error.h>
 
