@@ -1,4 +1,4 @@
-/* $Id: geomutils.h,v 1.31 2002/04/18 17:25:26 dsanta Exp $ */
+/* $Id: geomutils.h,v 1.32 2002/08/09 15:26:44 aspert Exp $ */
 
 
 /*
@@ -36,9 +36,11 @@
  *
  *  Reference :
  *   "MESH : Measuring Errors between Surfaces using the Hausdorff distance"
- *   Submitted to ICME 2002, available on http://mesh.epfl.ch
+ *   Accepted for publication, ICME 2002, available on http://mesh.epfl.ch
  *
  */
+
+
 
 #include <3dmodel.h>
 
