@@ -1,4 +1,4 @@
-/* $Id: geomutils.c,v 1.11 2002/03/15 16:32:21 aspert Exp $ */
+/* $Id: geomutils.c,v 1.12 2002/08/09 15:26:45 aspert Exp $ */
 
 
 /*
@@ -36,9 +36,11 @@
  *
  *  Reference :
  *   "MESH : Measuring Errors between Surfaces using the Hausdorff distance"
- *   Submitted to ICME 2002, available on http://mesh.epfl.ch
+ *   Accepted for publication, ICME 2002, available on http://mesh.epfl.ch
  *
  */
+
+
 
 #include <3dmodel.h>
 #define _GEOMUTILS_C_
