@@ -1,4 +1,4 @@
-/* $Id: mesh.cpp,v 1.50 2002/06/06 12:00:17 aspert Exp $ */
+/* $Id: mesh.cpp,v 1.51 2002/08/09 15:26:42 aspert Exp $ */
 
 
 /*
@@ -36,9 +36,11 @@
  *
  *  Reference :
  *   "MESH : Measuring Errors between Surfaces using the Hausdorff distance"
- *   Submitted to ICME 2002, available on http://mesh.epfl.ch
+ *   Accepted for publication, ICME 2002, available on http://mesh.epfl.ch
  *
  */
+
+
 
 #include <time.h>
 #include <string.h>
