@@ -1,4 +1,4 @@
-/* $Id: mesh.h,v 1.3 2002/03/15 16:32:13 aspert Exp $ */
+/* $Id: mesh.h,v 1.4 2002/08/09 15:26:42 aspert Exp $ */
 
 
 /*
@@ -36,9 +36,11 @@
  *
  *  Reference :
  *   "MESH : Measuring Errors between Surfaces using the Hausdorff distance"
- *   Submitted to ICME 2002, available on http://mesh.epfl.ch
+ *   Accepted for publication, ICME 2002, available on http://mesh.epfl.ch
  *
  */
+
+
 
 #ifndef MESH_H
 #define MESH_H
